Fix SVG issue on Firefox

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -217,6 +217,7 @@ section {
 .home-card--basic {
   max-width: 16em;
   justify-content: center;
+  width: 100%;
 }
 
 .home-card--basic img {
